--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ header{
     padding: 15px;
     border-radius: 500px;
 } */
-.carrusel_container{
+/* .carrusel_container{
     width: 90%;
     display: flex;
     flex-wrap: nowrap;
@@ -173,7 +173,7 @@ header{
 
     200%{margin-left: -800%;}
     220%{margin-left: -800%;}
-}
+} */
 
 
 #productos_principales{
@@ -197,7 +197,9 @@ header{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Se adapta al tamaño de la pantalla */
     gap: 20px;
-    width: 60%;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-bottom: 20px;
 }
 .SlideProductos{background-color: white;
